<resources>
    <string name="app_name">KaamKiBaat</string>
    <string name="image">image</string>
    <string name="website" />
    <string name="home">Home</string>
    <string name="politics">Politics</string>
    <string name="news">News</string>
    <string name="bio">Biography</string>
    <string name="video">Video</string>
    <string name="exit">Exit</string>
    <string name="categories">Categories</string>
    <string name="entertainment">Entertainment</string>
    <string name="tech_news">Tech News</string>
    <string name="biography">Biography</string>
    <string name="videos">Videos</string>
    <string name="pod_cast">Pod Cast</string>
    <string name="latest">Latest</string>
    <string name="follow_us">Follow Us</string>
    <string name="share">Share</string>
    <string name="drw_op">Drawer Open</string>
    <string name="drw_cl">Drawer Close</string>
    <string name="search">Search</string>
    <string name="loading">Loading....</string>
    <string name="ConDes">Description</string>
    <string name="advertisement">advertisement</string>
    <string name="title">title</string>
    <string name="content">content</string>
    <string name="catageory">catageory</string>
    <string name="titletag">titletag</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="kaam_ki_baat">KAAM KI BAAT</string>
    <string name="swagat">स्वागत हैं आपका</string>
</resources>