<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".politics.PoliticsActivity2">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_P_A2_A1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/advertisement" />

            <ImageView
                android:id="@+id/imageView_P_A2_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/ConDes"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView_P_A2_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/content"
                android:text="@string/title" />

            <TextView
                android:id="@+id/textView_P_A2_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/ConDes"
                android:text="@string/content" />

            <TextView
                android:id="@+id/textView_P_A2_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="2dp"
                android:visibility="gone"
                android:text="@string/catageory" />

            <TextView
                android:id="@+id/textView_P_A2_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="2dp"
                android:visibility="gone"
                android:text="@string/titletag" />

            <TextView
                android:id="@+id/textView_P_A2_A2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/advertisement" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>